--- a/Test Quadratic 50-50.ipynb
+++ b/Test Quadratic 50-50.ipynb
@@ -134,108 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|██████████████████████████▎                                                    | 333/1000 [01:10<02:01,  5.49it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_dimen' (<class\n",
-      "'pyomo.core.base.initializer.ConstantInitializer'>).  Setting field to `None`\n",
-      "on new object\n",
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_values' (<class\n",
-      "'pyomo.core.base.set.TuplizeValuesInitializer'>).  Setting field to `None` on\n",
-      "new object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███████████████████████████▎                                                   | 346/1000 [01:12<02:24,  4.53it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_dimen' (<class\n",
-      "'pyomo.core.base.initializer.ConstantInitializer'>).  Setting field to `None`\n",
-      "on new object\n",
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_values' (<class\n",
-      "'pyomo.core.base.set.TuplizeValuesInitializer'>).  Setting field to `None` on\n",
-      "new object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 38%|█████████████████████████████▋                                                 | 376/1000 [01:18<01:50,  5.66it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Unable to clone Pyomo component attribute. Component 'obj' contains an\n",
-      "uncopyable field '_init_sense' (<class\n",
-      "'pyomo.core.base.initializer.ConstantInitializer'>).  Setting field to `None`\n",
-      "on new object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 46%|████████████████████████████████████▎                                          | 459/1000 [01:34<02:07,  4.23it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_dimen' (<class\n",
-      "'pyomo.core.base.initializer.ConstantInitializer'>).  Setting field to `None`\n",
-      "on new object\n",
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_values' (<class\n",
-      "'pyomo.core.base.set.TuplizeValuesInitializer'>).  Setting field to `None` on\n",
-      "new object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 53%|█████████████████████████████████████████▊                                     | 530/1000 [01:48<01:30,  5.20it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_dimen' (<class\n",
-      "'pyomo.core.base.initializer.ConstantInitializer'>).  Setting field to `None`\n",
-      "on new object\n",
-      "ERROR: Unable to clone Pyomo component attribute. Component 'OrderedScalarSet'\n",
-      "contains an uncopyable field '_init_values' (<class\n",
-      "'pyomo.core.base.set.TuplizeValuesInitializer'>).  Setting field to `None` on\n",
-      "new object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [03:24<00:00,  4.88it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [05:38<00:00,  2.95it/s]\n"
      ]
     },
     {
@@ -244,13 +143,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -16.141183          1.883578      0.142254\n",
-      "std       0.318926          0.487851      0.015170\n",
-      "min     -16.979353          0.470149      0.121331\n",
-      "25%     -16.366533          1.517763      0.132164\n",
-      "50%     -16.138196          1.847186      0.140491\n",
-      "75%     -15.916087          2.209809      0.146299\n",
-      "max     -15.202193          3.384434      0.360031\n",
+      "mean    -16.141183          1.883578      0.245323\n",
+      "std       0.318926          0.487851      0.069632\n",
+      "min     -16.979353          0.470149      0.156702\n",
+      "25%     -16.366533          1.517763      0.199059\n",
+      "50%     -16.138196          1.847186      0.231558\n",
+      "75%     -15.916087          2.209809      0.272832\n",
+      "max     -15.202193          3.384434      0.848458\n",
       "Number of infeasible solution: 1000\n"
      ]
     }
@@ -308,7 +207,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:49<00:00,  5.92it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [04:14<00:00,  3.93it/s]\n"
      ]
     },
     {
@@ -317,13 +216,13 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1.000000e+03            1000.0   1000.000000\n",
-      "mean   1.587427e+17               0.0      0.160723\n",
-      "std    1.495455e+17               0.0      0.060803\n",
-      "min   -1.628116e+01               0.0      0.129913\n",
-      "25%   -1.098950e+01               0.0      0.147283\n",
-      "50%    2.266936e+17               0.0      0.149946\n",
-      "75%    2.994127e+17               0.0      0.164228\n",
-      "max    5.661554e+17               0.0      1.582247\n",
+      "mean   1.587427e+17               0.0      0.243883\n",
+      "std    1.495455e+17               0.0      0.111663\n",
+      "min   -1.628116e+01               0.0      0.157912\n",
+      "25%   -1.098950e+01               0.0      0.193062\n",
+      "50%    2.266936e+17               0.0      0.224638\n",
+      "75%    2.994127e+17               0.0      0.268512\n",
+      "max    5.661554e+17               0.0      2.894798\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -352,6 +251,76 @@
   },
   {
    "cell_type": "markdown",
+   "id": "316273d7-690a-424a-bab4-6a7638457d87",
+   "metadata": {},
+   "source": [
+    "### Heuristic - N3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "52ce4b8c-8469-4aaa-9346-e650c2e19b81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_heur = model.first_solution_heuristic(nodes_limit=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c06bcc68-76fc-42af-89fc-dff179a85999",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [06:40<00:00,  2.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1.000000e+03            1000.0   1000.000000\n",
+      "mean   1.467174e+16               0.0      0.390463\n",
+      "std    5.131523e+16               0.0      1.107813\n",
+      "min   -1.657508e+01               0.0      0.163690\n",
+      "25%   -1.536716e+01               0.0      0.223936\n",
+      "50%   -1.346294e+01               0.0      0.276416\n",
+      "75%    2.006904e+12               0.0      0.375336\n",
+      "max    2.797341e+17               0.0     30.982206\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "    # set params\n",
+    "    model_heur.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # solve\n",
+    "    tick = time.time()\n",
+    "    xval, objval = model_heur.solve(\"gurobi\")\n",
+    "    tock = time.time()\n",
+    "    # eval\n",
+    "    params.append(list(b))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model_heur.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_heur_n3_50-50.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9819c60c-df5f-41c6-ae83-888c75aa78d7",
    "metadata": {},
    "source": [
@@ -360,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -373,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -388,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -414,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -642,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -650,7 +619,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:13<00:00, 74.01it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:17<00:00, 58.69it/s]\n"
      ]
     },
     {
@@ -659,13 +628,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -13.569813          0.003140      0.002844\n",
-      "std       0.295833          0.020386      0.000748\n",
-      "min     -14.394269          0.000000      0.001005\n",
-      "25%     -13.785014          0.000000      0.002271\n",
-      "50%     -13.568596          0.000000      0.002998\n",
-      "75%     -13.371199          0.000000      0.003105\n",
-      "max     -12.658380          0.278483      0.008042\n",
+      "mean    -13.569813          0.003140      0.004451\n",
+      "std       0.295833          0.020386      0.001758\n",
+      "min     -14.394269          0.000000      0.001997\n",
+      "25%     -13.785014          0.000000      0.003008\n",
+      "50%     -13.568596          0.000000      0.004001\n",
+      "75%     -13.371199          0.000000      0.005297\n",
+      "max     -12.658380          0.278483      0.012526\n",
       "Number of infeasible solution: 44\n"
      ]
     }
@@ -713,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -726,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -741,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -767,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -868,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -876,7 +845,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:14<00:00, 69.70it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:17<00:00, 56.29it/s]\n"
      ]
     },
     {
@@ -885,13 +854,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -13.397122          0.004460      0.003022\n",
-      "std       0.274324          0.026725      0.000827\n",
-      "min     -14.132930          0.000000      0.001003\n",
-      "25%     -13.585816          0.000000      0.002512\n",
-      "50%     -13.419505          0.000000      0.003000\n",
-      "75%     -13.220037          0.000000      0.003465\n",
-      "max     -12.211704          0.350001      0.008515\n",
+      "mean    -13.397122          0.004460      0.004476\n",
+      "std       0.274324          0.026725      0.001672\n",
+      "min     -14.132930          0.000000      0.001537\n",
+      "25%     -13.585816          0.000000      0.003274\n",
+      "50%     -13.419505          0.000000      0.004050\n",
+      "75%     -13.220037          0.000000      0.005211\n",
+      "max     -12.211704          0.350001      0.014135\n",
       "Number of infeasible solution: 55\n"
      ]
     }
