--- a/Test Quadratic 20-20.ipynb
+++ b/Test Quadratic 20-20.ipynb
@@ -155,7 +155,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/cq_exact_rnd_20-20.csv\")"
+    "df.to_csv(\"result/cq_exact_20-20.csv\")"
    ]
   },
   {
